display-module/build/log/idf_py_stdout_output_49176
Command: ninja all
[1/9] Building C object esp-idf/gui/CMakeFiles/__idf_gui.dir/gui.c.obj
FAILED: esp-idf/gui/CMakeFiles/__idf_gui.dir/gui.c.obj 
C:\Espressif\tools\xtensa-esp-elf\esp-15.2.0_20251204\xtensa-esp-elf\bin\xtensa-esp32-elf-gcc.exe -DESP_PLATFORM -DIDF_VER=\"v6.0.1\" -DLV_CONF_INCLUDE_SIMPLE -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -IC:/Dev/Projects/ESP32/temp-humid-mesh/display-module/build/config -IC:/Dev/Projects/ESP32/temp-humid-mesh/display-module/components/gui -IC:/esp/v6.0.1/esp-idf/components/esp_libc/platform_include -IC:/esp/v6.0.1/esp-idf/components/freertos/config/include -IC:/esp/v6.0.1/esp-idf/components/freertos/config/include/freertos -IC:/esp/v6.0.1/esp-idf/components/freertos/config/xtensa/include -IC:/esp/v6.0.1/esp-idf/components/freertos/FreeRTOS-Kernel/include -IC:/esp/v6.0.1/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -IC:/esp/v6.0.1/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos -IC:/esp/v6.0.1/esp-idf/components/freertos/esp_additions/include -IC:/esp/v6.0.1/esp-idf/components/esp_hw_support/include -IC:/esp/v6.0.1/esp-idf/components/esp_hw_support/include/soc -IC:/esp/v6.0.1/esp-idf/components/esp_hw_support/ldo/include -IC:/esp/v6.0.1/esp-idf/components/esp_hw_support/debug_probe/include -IC:/esp/v6.0.1/esp-idf/components/esp_hw_support/etm/include -IC:/esp/v6.0.1/esp-idf/components/esp_hw_support/mspi_timing_tuning/include -IC:/esp/v6.0.1/esp-idf/components/esp_hw_support/mspi_timing_tuning/tuning_scheme_impl/include -IC:/esp/v6.0.1/esp-idf/components/esp_hw_support/power_supply/include -IC:/esp/v6.0.1/esp-idf/components/esp_hw_support/modem/include -IC:/esp/v6.0.1/esp-idf/components/esp_hw_support/port/esp32/. -IC:/esp/v6.0.1/esp-idf/components/esp_hw_support/port/esp32/include -IC:/esp/v6.0.1/esp-idf/components/heap/include -IC:/esp/v6.0.1/esp-idf/components/heap/tlsf -IC:/esp/v6.0.1/esp-idf/components/log/include -IC:/esp/v6.0.1/esp-idf/components/soc/include -IC:/esp/v6.0.1/esp-idf/components/soc/esp32 -IC:/esp/v6.0.1/esp-idf/components/soc/esp32/include -IC:/esp/v6.0.1/esp-idf/components/soc/esp32/register -IC:/esp/v6.0.1/esp-idf/components/hal/platform_port/include -IC:/esp/v6.0.1/esp-idf/components/hal/esp32/include -IC:/esp/v6.0.1/esp-idf/components/hal/include -IC:/esp/v6.0.1/esp-idf/components/esp_rom/include -IC:/esp/v6.0.1/esp-idf/components/esp_rom/esp32/include -IC:/esp/v6.0.1/esp-idf/components/esp_rom/esp32/include/esp32 -IC:/esp/v6.0.1/esp-idf/components/esp_rom/esp32 -IC:/esp/v6.0.1/esp-idf/components/esp_common/include -IC:/esp/v6.0.1/esp-idf/components/esp_system/include -IC:/esp/v6.0.1/esp-idf/components/esp_system/port/soc -IC:/esp/v6.0.1/esp-idf/components/esp_system/port/include/private -IC:/esp/v6.0.1/esp-idf/components/esp_stdio/include -IC:/esp/v6.0.1/esp-idf/components/xtensa/esp32/include -IC:/esp/v6.0.1/esp-idf/components/xtensa/include -IC:/esp/v6.0.1/esp-idf/components/xtensa/deprecated_include -IC:/esp/v6.0.1/esp-idf/components/esp_hal_gpio/include -IC:/esp/v6.0.1/esp-idf/components/esp_hal_gpio/esp32/include -IC:/esp/v6.0.1/esp-idf/components/esp_hal_usb/include -IC:/esp/v6.0.1/esp-idf/components/esp_hal_pmu/include -IC:/esp/v6.0.1/esp-idf/components/esp_hal_pmu/esp32/include -IC:/esp/v6.0.1/esp-idf/components/esp_hal_ana_conv/include -IC:/esp/v6.0.1/esp-idf/components/esp_hal_ana_conv/esp32/include -IC:/esp/v6.0.1/esp-idf/components/esp_hal_dma/include -IC:/esp/v6.0.1/esp-idf/components/esp_hal_i2s/include -IC:/esp/v6.0.1/esp-idf/components/esp_hal_i2s/esp32/include -IC:/esp/v6.0.1/esp-idf/components/lwip/include -IC:/esp/v6.0.1/esp-idf/components/lwip/include/apps -IC:/esp/v6.0.1/esp-idf/components/lwip/lwip/src/include -IC:/esp/v6.0.1/esp-idf/components/lwip/port/include -IC:/esp/v6.0.1/esp-idf/components/lwip/port/freertos/include -IC:/esp/v6.0.1/esp-idf/components/lwip/port/esp32xx/include -IC:/esp/v6.0.1/esp-idf/components/lwip/port/esp32xx/include/arch -IC:/esp/v6.0.1/esp-idf/components/lwip/port/esp32xx/include/sys -IC:/Dev/Projects/ESP32/temp-humid-mesh/display-module/managed_components/lvgl__lvgl -IC:/Dev/Projects/ESP32/temp-humid-mesh/display-module/managed_components/lvgl__lvgl/src -IC:/Dev/Projects/ESP32/temp-humid-mesh/display-module/managed_components -IC:/Dev/Projects/ESP32/temp-humid-mesh/display-module/managed_components/lvgl__lvgl/examples -IC:/Dev/Projects/ESP32/temp-humid-mesh/display-module/managed_components/lvgl__lvgl/demos -IC:/esp/v6.0.1/esp-idf/components/esp_timer/include @"C:/Dev/Projects/ESP32/temp-humid-mesh/display-module/build/toolchain/cflags" -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-error=extra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fno-shrink-wrap -fmacro-prefix-map=C:/Dev/Projects/ESP32/temp-humid-mesh/display-module=. -fmacro-prefix-map=C:/esp/v6.0.1/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu23 -Wno-old-style-declaration -fzero-init-padding-bits=all -fno-malloc-dce -MD -MT esp-idf/gui/CMakeFiles/__idf_gui.dir/gui.c.obj -MF esp-idf\gui\CMakeFiles\__idf_gui.dir\gui.c.obj.d -o esp-idf/gui/CMakeFiles/__idf_gui.dir/gui.c.obj -c C:/Dev/Projects/ESP32/temp-humid-mesh/display-module/components/gui/gui.c
C:/Dev/Projects/ESP32/temp-humid-mesh/display-module/components/gui/gui.c: In function 'gui_init':
C:/Dev/Projects/ESP32/temp-humid-mesh/display-module/components/gui/gui.c:39:22: error: invalid initializer
   39 |     lv_obj_t node1 = lv_obj_create(lv_scr_act());
      |                      ^~~~~~~~~~~~~
C:/Dev/Projects/ESP32/temp-humid-mesh/display-module/components/gui/gui.c:40:20: error: incompatible type for argument 1 of 'lv_obj_set_pos'
   40 |     lv_obj_set_pos(node1, 40, 10);
      |                    ^~~~~
      |                    |
      |                    lv_obj_t {aka struct _lv_obj_t}
In file included from C:/Dev/Projects/ESP32/temp-humid-mesh/display-module/managed_components/lvgl__lvgl/src/draw/sw/lv_draw_sw_dither.h:16,
                 from C:/Dev/Projects/ESP32/temp-humid-mesh/display-module/managed_components/lvgl__lvgl/src/draw/sw/lv_draw_sw_gradient.h:18,
                 from C:/Dev/Projects/ESP32/temp-humid-mesh/display-module/managed_components/lvgl__lvgl/src/draw/lv_draw_rect.h:20,
                 from C:/Dev/Projects/ESP32/temp-humid-mesh/display-module/managed_components/lvgl__lvgl/src/draw/lv_draw.h:23,
                 from C:/Dev/Projects/ESP32/temp-humid-mesh/display-module/managed_components/lvgl__lvgl/src/hal/lv_hal_disp.h:21,
                 from C:/Dev/Projects/ESP32/temp-humid-mesh/display-module/managed_components/lvgl__lvgl/src/hal/lv_hal.h:16,
                 from C:/Dev/Projects/ESP32/temp-humid-mesh/display-module/managed_components/lvgl__lvgl/lvgl.h:33,
                 from C:/Dev/Projects/ESP32/temp-humid-mesh/display-module/components/gui/gui.c:3:
C:/Dev/Projects/ESP32/temp-humid-mesh/display-module/managed_components/lvgl__lvgl/src/core/lv_obj_pos.h:47:40: note: expected 'struct _lv_obj_t *' but argument is of type 'lv_obj_t' {aka 'struct _lv_obj_t'}
   47 | void lv_obj_set_pos(struct _lv_obj_t * obj, lv_coord_t x, lv_coord_t y);
      |                     ~~~~~~~~~~~~~~~~~~~^~~
C:/Dev/Projects/ESP32/temp-humid-mesh/display-module/components/gui/gui.c:41:21: error: incompatible type for argument 1 of 'lv_obj_set_size'
   41 |     lv_obj_set_size(node1, 220, 35);
      |                     ^~~~~
      |                     |
      |                     lv_obj_t {aka struct _lv_obj_t}
C:/Dev/Projects/ESP32/temp-humid-mesh/display-module/managed_components/lvgl__lvgl/src/core/lv_obj_pos.h:82:41: note: expected 'struct _lv_obj_t *' but argument is of type 'lv_obj_t' {aka 'struct _lv_obj_t'}
   82 | void lv_obj_set_size(struct _lv_obj_t * obj, lv_coord_t w, lv_coord_t h);
      |                      ~~~~~~~~~~~~~~~~~~~^~~
C:/Dev/Projects/ESP32/temp-humid-mesh/display-module/components/gui/gui.c:43:45: error: incompatible type for argument 1 of 'lv_label_create'
   43 |     lv_obj_t *node1_label = lv_label_create(node1);
      |                                             ^~~~~
      |                                             |
      |                                             lv_obj_t {aka struct _lv_obj_t}
In file included from C:/Dev/Projects/ESP32/temp-humid-mesh/display-module/managed_components/lvgl__lvgl/lvgl.h:49:
C:/Dev/Projects/ESP32/temp-humid-mesh/display-module/managed_components/lvgl__lvgl/src/widgets/lv_label.h:90:39: note: expected 'lv_obj_t *' {aka 'struct _lv_obj_t *'} but argument is of type 'lv_obj_t' {aka 'struct _lv_obj_t'}
   90 | lv_obj_t * lv_label_create(lv_obj_t * parent);
      |                            ~~~~~~~~~~~^~~~~~
[2/9] Performing build step for 'bootloader'
[1/1] C:\Windows\system32\cmd.exe /C "cd /D C:\Dev\Projects\ESP32\temp-humid-mesh\display-module\build\bootloader && C:\Espressif\tools\python\v6.0.1\venv\Scripts\python.exe C:/esp/v6.0.1/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x1000 C:/Dev/Projects/ESP32/temp-humid-mesh/display-module/build/bootloader/bootloader.bin"
Bootloader binary size 0x6610 bytes. 0x9f0 bytes (9%) free.
ninja: build stopped: subcommand failed.
